--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
 body {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+  color:white;
+  background-color: #36312b;
+}
+
+.color-body {
   background: rgb(221,240,238);
   background: radial-gradient(circle, rgba(221,240,238,1) 0%, rgba(239,255,240,1) 100%);
+}
+
+.image-body {
+  background-image: url('table.jpg');
+  opacity: 0.8;
 }
 
 .eng-handwrite {
@@ -19,31 +30,58 @@ body {
 }
 
 .main-container {
-  text-align: center; 
+  text-align: center;
+  padding: 3rem 0;
 }
+/* 
+.main-container::before  {
+  content: "";
+  background: url('table.jpg');
+  background-repeat: repeat-y;
+  opacity: 0.8;
+  filter: blur(1px);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1; 
+} */
+
+.back-static {
+  background-image: url(table.jpg);
+  opacity: 0.3;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  filter: brightness(1.5) blur(2px);
+}
+
 
 .main-title {
   font-size: 4.5rem;
   margin: 1rem;
 }
+
 .sub-title {
   font-size: 2.6rem;
   margin: 1rem;
 }
 
 .map-container {
-  overflow:hidden;
-  padding-bottom:56.25%;
-  position:relative;
-  height:0;
+  height: calc(100vh / 2);
+  margin: 2rem auto;
 }
 
-.map-container iframe {
-  left:0;
-  top:0;
-  height:100%;
-  width:100%;
-  position:absolute;
+@media screen and (min-width: 768px) {
+  .map-container {
+    width: 85%;
+    height: calc(100vh / 3);
+    height: 400px;
+  }
 }
 
 .paragraph {
@@ -52,14 +90,19 @@ body {
   display: inline-block;
 }
 
-@media screen and (min-width: 768px) {
-  .map-container iframe {
-  height: 70%;
-  width: 80%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  }
+.content-section > h3 {
+  margin-bottom: 0;
+  font-size: 2.3rem;
+  font-weight: bold;
 }
+
+.content-section > p {
+  margin-top: 0;
+  font-size: 1.2rem;
+  max-width: 600px;
+  margin: auto;
+}
+
 /* 
 font-family: 'Caudex', serif;
 font-family: 'GFS Neohellenic', sans-serif;
