--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,26 @@ body {
 
 .main-container {
   text-align: center;
-  padding: 3rem 0;
+  padding: 1rem 0;
 }
+
+@media screen and (min-width: 768px) {
+  .main-container {
+    padding: 2rem 0;
+  }
+}
+
+.date-container {
+  margin: 1rem;
+  border: 4px groove #ffffff5e;
+}
+@media screen and (min-width: 550px) {
+  .date-container {
+    margin: 1rem auto;
+    max-width: 500px;
+  }
+}
+
 /* 
 .main-container::before  {
   content: "";
@@ -62,7 +80,7 @@ body {
 
 
 .main-title {
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   margin: 1rem;
 }
 
@@ -80,26 +98,42 @@ body {
   .map-container {
     width: 85%;
     height: calc(100vh / 3);
-    height: 400px;
+    height: 500px;
+    max-width: 800px;
   }
 }
 
-.paragraph {
-  font-size: 1.2rem;
-  max-width: 500px;
-  display: inline-block;
-}
 
 .content-section > h3 {
   margin-bottom: 0;
-  font-size: 2.3rem;
+  font-size: 1.5rem;
   font-weight: bold;
+}
+
+
+.content-section > h3::before {
+  content: "\21AA";
+  /* visibility: hidden; */
+  opacity: 0;
+  transition: opacity 0.5s, visibility 0.5s;
+}
+
+.content-section > h3::after {
+  content: "\21AA";
+  visibility: hidden;
+}
+
+.content-section > h3:hover::before {
+  /* visibility: visible; */
+  opacity: 1;
+  transition: opacity 0.5s, visibility 0.5s;
 }
 
 .content-section > p {
   margin-top: 0;
   font-size: 1.2rem;
   max-width: 600px;
+  padding:0 0.5rem;
   margin: auto;
 }
 
