--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -105,6 +110,7 @@ body {
 .map-container {
   height: calc(100vh / 2);
   margin: 2rem auto;
+  width: 96vw;
 }
 
 @media screen and (min-width: 768px) {
@@ -125,9 +131,8 @@ body {
 }
 
 
-.content-section > h3::before {
+/* .content-section > h3::before {
   content: "\21AA";
-  /* visibility: hidden; */
   opacity: 0;
   transition: opacity 0.5s, visibility 0.5s;
 }
@@ -138,10 +143,9 @@ body {
 }
 
 .content-section > h3:hover::before {
-  /* visibility: visible; */
   opacity: 1;
   transition: opacity 0.5s, visibility 0.5s;
-}
+} */
 
 .content-section > p {
   margin-top: 0;
@@ -149,6 +153,16 @@ body {
   max-width: 600px;
   padding:0 0.5rem;
   margin: auto;
+}
+
+.scroll-snap {
+  height: 100vh;
+  scroll-snap-align: start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* padding-top: 50%; */
 }
 
 /* 
