--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,6 @@ body {
   background: radial-gradient(circle, rgba(221,240,238,1) 0%, rgba(239,255,240,1) 100%);
 }
 
-.image-body {
-  background-image: url('table.jpg');
-  opacity: 0.8;
-}
 
 .eng-handwrite {
   font-weight: normal;
@@ -46,14 +42,8 @@ body {
 
 .main-container {
   text-align: center;
-  padding: 1rem 0;
 }
 
-@media screen and (min-width: 768px) {
-  .main-container {
-    padding: 2rem 0;
-  }
-}
 
 .date-container {
   margin: 1rem;
@@ -69,41 +59,22 @@ body {
   }
 }
 
-/* 
-.main-container::before  {
-  content: "";
-  background: url('table.jpg');
-  background-repeat: repeat-y;
-  opacity: 0.8;
-  filter: blur(1px);
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1; 
-} */
-
 .back-static {
-  background-image: url(table.jpg);
   opacity: 0.3;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  z-index: -1;
-  filter: brightness(1.5) blur(2px);
+  z-index: -10;
+  filter: brightness(1) blur(1px);
+  background-position-x: center;
+  background-size: cover;
 }
 
 
 .main-title {
   font-size: 4.2rem;
-  margin: 1rem;
-}
-
-.sub-title {
-  font-size: 2.6rem;
   margin: 1rem;
 }
 
@@ -127,25 +98,7 @@ body {
   margin-top: 1.5rem;
   margin-bottom: 0;
   font-size: 2rem;
-  /* font-weight: bold; */
 }
-
-
-/* .content-section > h3::before {
-  content: "\21AA";
-  opacity: 0;
-  transition: opacity 0.5s, visibility 0.5s;
-}
-
-.content-section > h3::after {
-  content: "\21AA";
-  visibility: hidden;
-}
-
-.content-section > h3:hover::before {
-  opacity: 1;
-  transition: opacity 0.5s, visibility 0.5s;
-} */
 
 .content-section > p {
   margin-top: 0;
@@ -156,13 +109,13 @@ body {
 }
 
 .scroll-snap {
+  position: relative;
   height: 100vh;
   scroll-snap-align: start;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* padding-top: 50%; */
 }
 
 /* 
@@ -173,3 +126,40 @@ font-family: 'Roboto', sans-serif;
 font-family: 'Sacramento', cursive;
 font-family: 'Satisfy', cursive;
 font-family: 'The Nautigal', cursive; */
+
+#page_1 {
+  background-image: url(page_1.jpg);
+}
+#page_2 {
+  background-image: url(page_2.jpg);
+}
+#page_3 {
+  background-image: url(page_3.jpg);
+}
+#page_4 {
+  background-image: url(page_4.jpg);
+}
+#page_5 {
+  background-image: url(page_5.jpg);
+}
+#page_6 {
+  background-image: url(page_6.jpg);
+}
+#page_7 {
+  background-image: url(page_7.jpg);
+}
+#page_8 {
+  background-image: url(page_8.jpg);
+}
+#page_9 {
+  background-image: url(page_9.jpg);
+}
+#page_10 {
+  background-image: url(page_10.jpg);
+}
+#page_11 {
+  background-image: url(page_11.jpg);
+}
+#page_12 {
+  background-image: url(page_12.jpg);
+}
