--- a/styles.css
+++ b/styles.css
@@ -169,14 +169,14 @@ header {
   top: 0;
   right: 0;
   width: 300px;
-  height: 100vh;
+  height: 100%;
   background-color: #232623ed;
   z-index: 1;
   transform: translateX(300px);
   transition: 0.3s ease-in-out;
 }
 
-.open {
+.nav-open {
   transform: translateX(0px);
   transition: 0.3s ease-in-out;
 }
@@ -224,7 +224,7 @@ header {
   transform: translateX(-100%);
 }
 
-.menu-btn button {
+/* .menu-btn button {
   background-color: transparent;
   color: white !important;
   border: 0;
@@ -233,9 +233,62 @@ header {
   width:45px;
   height:45px;
   cursor: pointer;
+} */
+
+.wrapper-menu {
+  padding: 1rem;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 330ms ease-out;
 }
 
-.menu-btn button:active {
-  color: #eeb413 !important;
-  background-color: #dec6ff88;
+.wrapper-menu:active > .line-menu {
+  background-color: #fff2c6 !important;
+}
+
+@media screen and (min-width: 550px) {
+  .wrapper-menu {
+    padding: 1.5rem;
+    width: 45px;
+    height: 45px;
+  }
+}
+
+.wrapper-menu.open {
+  transform: rotate(-45deg);  
+}
+
+.line-menu {
+  /* background-color: #dec6ff !important; */
+  background-color: #fff2c6 !important;
+  border-radius: 5px;
+  width: 100%;
+  height: 6px;
+}
+
+.line-menu.half {
+  width: 50%;
+}
+
+.line-menu.start {
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: right;
+}
+
+.open .line-menu.start {
+  transform: rotate(-90deg) translateX(3px);
+}
+
+.line-menu.end {
+  align-self: flex-end;
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: left;
+}
+
+.open .line-menu.end {
+  transform: rotate(-90deg) translateX(-3px);
 }
