--- a/styles.css
+++ b/styles.css
@@ -335,3 +335,25 @@ header {
   text-decoration: none;
   color:white !important;
 }
+
+.map-link {
+  font-size: 2.2rem;
+  color: #fff2c6;
+  text-decoration: none;
+}
+.map-link:hover {
+  text-decoration: underline;
+}
+
+.map-link > img {
+  animation: bounce 2s ease-in-out 0s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {transform: translateY(0);} 
+  50% {transform: translateY(30px);} 
+}
+
+.map-link:active {
+  color: #eeb413 !important;
+}
