- fix iOS phone links - page_5 to jpeg - minor stylistic fixes - spelling check fixes

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ font-family: 'The Nautigal', cursive; */
   background-position-y: center;
 }
 #party {
-  background-image: url(page_5.webp);
+  background-image: url(page_5.jpg);
   background-position-y: center;
 }
 #map {
